Changes for 1.3.4:

 - added events.object (Alexei)
 - developed PopUp menu for overview (Eugene)
 - added events.source (Alexei)
 - renamed events.triggerid -> events.objectid (Alexei)
 - new tables drules,dchecks,dhosts,dservices (Alexei)
 - basic support of auto-discovery (Alexei)
 - new Server parameter StartDiscoverers (Alexei)
 - fixed "system.cpu.util[]" (Eugene)
 - removed housekeeper warnings from front-end (Alexei)
 - HTTP poller won't verify SSL certificates to enable self-signed (Alexei)
 - fixed warning when enabling/disabling action (Alexei)
 - added support of avg() for items having integer type (Alexei)
 - added user group for database down messages (Alexei/Eugene)
 - removed support of action repeats (Alexei/Eugene)
 - fixed upgrade of rights,sysmaps,sysmaps_elements (Alexei)
 - fixed initial creation of user rights in data.sql (Alexei)
 - fixes of PostgreSQL compile (Alexei)
 - added icons for elements of map having Unknown status (Eugene)
 - added installation check for 'BC math' (Eugene)
 - added actions.evaltype (Alexei)
 - added support of all AND, all OR and AND/OR action conditions (Alexei/Eugene)
 - fixed processing of Text items (Alexei)
 - NetBSD compilation fixes (Alexei)

Changes for 1.3.3:

 - support of hysteresis (Alexei)
 - support of macro {TRIGGER.VALUE} in trigger expressions (Alexei)
 - added new table 'ids' which will store last IDs for all tables (Alexei)
 - added highlighting for second level menu (Eugene)
 - added "Clone" functionality (Eugene)
 - added Watchdog for database availability (Alexei)
 - developed configuration of Jabber messaging (Eugene)
 - split hostname and DNS name in frontend (Eugene)
 - improved detection of runned ZABBIX applications (Eugene)
 - fixed large SQLs calling (Eugene)
 - new templates Unix_t, Windows_t, Standalone_t (Alexei)
 - added media_type.username, media_type.passwd (Alexei)
 - added hosts.dns. Host name is for informational purposes only. (Alexei)